syntax = "proto3";
package mapeo;

import "common/v1.proto";
import "options.proto";

message Icon_1 {
  // **DO NOT CHANGE dataTypeId** generated with `openssl rand -hex 6`
  option (dataTypeId) = "97e8cd9f0854";
  option (schemaName) = "icon";

  Common_1 common = 1;
  optional string name = 2 [(required) = true];

  message IconVariantSvg {}

  message IconVariantPng {
    enum PixelDensity {
      pixel_density_unspecified = 0;
      x1 = 1;
      x2 = 2;
      x3 = 3;
    }

    optional PixelDensity pixelDensity = 1 [(required) = true];
  }

  message IconVariant {
    oneof variant {
      IconVariantSvg svgIcon = 1;
      IconVariantPng pngIcon = 2;
    }

    enum Size {
      size_unspecified = 0;
      small = 1;
      medium = 2;
      large = 3;
    }

    message BlobVersionId {
      bytes coreDiscoveryKey = 1;
      int32 index = 2;
    }

    optional Size size = 3 [(required) = true];
    optional BlobVersionId blobVersionId = 4 [(required) = true];
  }
  repeated IconVariant variants = 3;
}
