syntax = "proto3";
package mapeo;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "common/v1.proto";
import "options.proto";

message Membership_1 {
  // **DO NOT CHANGE dataTypeId** generated with `openssl rand -hex 6`
  option (dataTypeId) = "69acce0ea09b";
  option (schemaName) = "membership";

  Common_1 common = 1;

  bytes roleId = 5;
  uint32 fromIndex = 6;
}
