syntax = "proto3";
package mapeo;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "tags/v1.proto";
import "common/v1.proto";
import "versionId/v1.proto";
import "options.proto";

message Preset_1 {
  // **DO NOT CHANGE dataTypeId** generated with `openssl rand -hex 6`
  option (dataTypeId) = "d6aa854b7a99";
  option (schemaName) = "preset";

  Common_1 common = 1;

  string name = 5;
  repeated Geometry geometry = 6;
  map<string, TagValue_1> tags = 7;
  map<string, TagValue_1> addTags = 8;
  map<string, TagValue_1> removeTags = 9;
  repeated FieldRef fieldRefs = 10;
  optional IconRef iconRef = 11;
  repeated string terms = 12;
  string color = 13;

  enum Geometry {
    point = 0;
    vertex = 1;
    line = 2;
    area = 3;
    relation = 4;
  }


  message FieldRef {
    bytes docId = 1;
    VersionId_1 versionId = 2;
  }

  message IconRef {
    bytes docId = 1;
    VersionId_1 versionId = 2;
  }
}
