syntax = "proto3";
package mapeo;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "tags/v1.proto";
import "common/v1.proto";

message Preset_2 {

  Common_1 common = 1;

  string name = 5;
  enum Geometry {
    point = 0;
    vertex = 1;
    line = 2;
    area = 3;
    relation = 4;
  }
  repeated Geometry geometry = 6;
  optional Tags_1 tags = 7;
  optional Tags_1 addTags = 8;
  optional Tags_1 removeTags = 9;
  repeated bytes fieldIds = 10;
  optional bytes iconId = 11;
  repeated string terms = 12;
}
