syntax = "proto3";
package mapeo;

import "common/v1.proto";
import "google/protobuf/timestamp.proto";
import "options.proto";

message ProjectSettings_1 {
  // **DO NOT CHANGE dataTypeId** generated with `openssl rand -hex 6`
  option (dataTypeId) = "626b45fe2942";
  option (schemaName) = "projectSettings";

  Common_1 common = 1;

  message DefaultPresets {
    repeated bytes point = 1;
    repeated bytes area = 2;
    repeated bytes vertex = 3;
    repeated bytes line = 4;
    repeated bytes relation = 5;
  }

  message ConfigMetadata {
    string name = 1;
    google.protobuf.Timestamp buildDate = 2;
    google.protobuf.Timestamp importDate = 3;
    string fileVersion = 4;
  }

  optional DefaultPresets defaultPresets = 2;
  optional ConfigMetadata configMetadata = 3;
  optional string name = 4;
}
